--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 VITE_API_URL=https://server-log.studio8.my.id
 VITE_SIGNALING_URL=wss://cctv.studio8.my.id
+VITE_MQTT_URL=wss://z25505c1.ala.asia-southeast1.emqxsl.com:8084/mqtt
+VITE_MQTT_USERNAME=s8jtp_kontrol
+VITE_MQTT_PASSWORD=Pulsotron8?
