--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-VITE_API_URL=https://server-log.studio8.my.id
+VITE_API_URL=https://jtp3.studio8.my.id
 VITE_SIGNALING_URL=wss://cctv.studio8.my.id
 VITE_MQTT_URL=wss://z25505c1.ala.asia-southeast1.emqxsl.com:8084/mqtt
 VITE_MQTT_USERNAME=s8jtp_kontrol
 VITE_MQTT_PASSWORD=Pulsotron8?
+VITE_API_LOGS_URL=https://log-photobox.studio8.my.id/logs
